@@ -119,9 +119,9 @@ object CampaignAttributionCfLineSpec {
     "0",
     "0",
     "Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.0; Trident/5.0)",
+    "Internet Explorer 9",
     "Internet Explorer",
-    "Internet Explorer",
-    null,
+    "9.0",
     "Browser",
     "TRIDENT",
     "en-gb",
@@ -138,7 +138,7 @@ object CampaignAttributionCfLineSpec {
     "24",
     "784",
     "532",
-    "Windows",
+    "Windows Vista",
     "Windows",
     "Microsoft Corporation",
     "Europe/London",
