@@ -138,8 +138,8 @@ object LateOct2013CfLineSpec {
     "24",
     "1364",
     "694",
-    "Mac OS",
-    "Mac OS",
+    "Mac OS X",
+    "Mac OS X",
     "Apple Inc.",
     "Europe/London",
     "Computer",
