@@ -137,12 +137,12 @@ object PageViewCfLineSpec {
     "32",
     "2560",
     "935",
-    "Mac OS",
-    "Mac OS",
+    "iOS 5 (iPhone)",
+    "iOS",
     "Apple Inc.",
     "Europe/London",
-    "Computer",
-    "0",
+    "Mobile",
+    "1",
     "2560",
     "1440",
     "UTF-8",
