@@ -138,8 +138,8 @@ object RefererParserCfLineSpec {
     "24",
     "1279",
     "610",
-    "Mac OS",
-    "Mac OS",
+    "Mac OS X",
+    "Mac OS X",
     "Apple Inc.",
     "Europe/Berlin",
     "Computer",
