@@ -137,7 +137,7 @@ object StructEventCfLineSpec {
     "32",
     "2560",
     "934",
-    "Windows",
+    "Windows 7",
     "Windows",
     "Microsoft Corporation",
     "Europe/London",
